--- a/style.html
+++ b/style.html
@@ -4185,6 +4185,8 @@
             }
             .header {
                 align-items: flex-start;
+                padding: 10px 0 8px;
+                margin-bottom: 12px;
             }
             .header-actions {
                 gap: 10px;
@@ -4198,6 +4200,8 @@
                 align-items: flex-start;
             }
             .cards-hero {
+                margin-top: 0;
+                margin-bottom: 18px;
                 grid-template-columns: repeat(2, minmax(0, 1fr));
                 gap: 12px;
                 overflow-x: hidden;
