--- a/style.html
+++ b/style.html
@@ -3243,6 +3243,71 @@
             color: var(--text-color);
             transition: all 0.2s ease;
         }
+
+        /* Uploads de foto de volumes e movimentações */
+        .wizard-volume-photo,
+        .mov-item-photo {
+            margin-top: 10px;
+            padding: 12px;
+            border: 1px dashed rgba(12, 74, 110, 0.2);
+            border-radius: 12px;
+            background: color-mix(in srgb, var(--surface-color) 95%, white 5%);
+        }
+        .wizard-volume-photo label {
+            display: block;
+            margin-bottom: 6px;
+            font-weight: 600;
+            color: var(--text-secondary);
+        }
+        .photo-upload-card {
+            display: grid;
+            grid-template-columns: 1fr auto;
+            gap: 10px;
+            align-items: center;
+        }
+        .photo-upload-preview {
+            min-height: 90px;
+            border-radius: 10px;
+            border: 1px solid rgba(12, 74, 110, 0.12);
+            background: linear-gradient(135deg, rgba(12, 74, 110, 0.06), rgba(14, 165, 233, 0.06));
+            display: grid;
+            place-items: center;
+            overflow: hidden;
+            transition: border-color 0.2s ease, box-shadow 0.2s ease;
+        }
+        .photo-upload-preview img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+        .photo-upload-placeholder {
+            color: var(--text-muted);
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            font-weight: 600;
+        }
+        .photo-upload-actions {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+            justify-content: flex-end;
+            flex-wrap: wrap;
+        }
+        .photo-upload-btn.is-loading {
+            pointer-events: none;
+            opacity: 0.7;
+        }
+        .photo-upload-clear {
+            color: var(--text-secondary);
+            text-decoration: underline;
+        }
+        .photo-upload-card.has-photo .photo-upload-preview {
+            border-color: rgba(12, 74, 110, 0.4);
+            box-shadow: 0 8px 18px rgba(12, 74, 110, 0.12);
+            background: #fff;
+        }
         .mov-item-actions .icon-btn:hover,
         .mov-item-actions .icon-btn:focus-visible {
             border-color: color-mix(in srgb, var(--primary-color) 45%, transparent);
